--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "test": "mocha --require chai/register-expect --reporter spec",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -22,6 +23,15 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "chai": "^5.1.2",
+    "mocha": "^11.1.0",
+    "sinon": "^19.0.2",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.0.0"
   }
 }
